--- a/src/main/resources/static/failed.html
+++ b/src/main/resources/static/failed.html
@@ -2,9 +2,9 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>查询成功</title>
+    <title>Failed</title>
 </head>
 <body>
-    爬取完毕
+    输入格式错误
 </body>
 </html>
