--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,26 +1,379 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-    <meta charset="UTF-8">
-    <title>搜索结果</title>
-</head>
-<body>
+	  xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="author" content="">
+		<meta name="keyword" content=" template, html5, css3, bootstrap4">
+		<meta name="description" content="HTML5 and CSS3 Template Based on Bootstrap 4">
+		<title>Shiki's Blog</title>
+		<link rel="stylesheet" href="ionicons/css/ionicons.min.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="sweetalert/dist/sweetalert.css">
+		<link rel="stylesheet" href="css/stisla.css">
 
-<br>
+		<!-- jquery -->
+		<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+		<!-- bootstrap -->
+		<link rel="stylesheet" type="text/css"  th:href="@{/bootstrap/css/bootstrap.min.css}" />
+		<script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+		<!-- jquery-validator -->
+		<script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
+		<script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
+		<!-- layer -->
+		<script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+		<!-- md5.js -->
+		<script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
+		<!-- common.js -->
+		<script type="text/javascript" th:src="@{/js/common.js}"></script>
+	</head>
 
-<form action="pixiv/getPixivImageUrl" method="post">
-    tags：<input type="text" name="tags" /><br/>
-    <input type="submit" value="提交" />
-</form>
+	<body>
+		<nav class="navbar navbar-expand-lg main-navbar">
+			<div class="container-fluid">			
+			  <a class="navbar-brand" href="#">
+			  	<img src="img/logo-light.png" alt="Logo">
+			  </a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon">
+			    	<i class="ion-navicon"></i>
+			    </span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNav">
+				  <div class="mr-auto"></div>
+			    <ul class="navbar-nav">
+			      <li class="nav-item active">
+			        <a class="nav-link smooth-link" href="#hero">Home</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link smooth-link" href="#features">Project Function</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link smooth-link" href="#blog">Blog</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link smooth-link" href="#project">Project </a>
+			      </li>
+			    </ul>
+			    <form class="form-inline">
+				    <a href="#contact" class="btn smooth-link align-middle btn-primary" style="position: absolute;left:200px;top:20px">Contact Me?</a>
+			    </form>
+			  </div>
+		  </div>
+		</nav>
+		<section class="hero bg-overlay" id="hero" data-bg="img/snow.jpg">
+			<div class="text">
+				<p class="lead"></p>
+				<h3 >This's <span class="bold">Shiki's blog</span>, based on <span class="bold">Bootstrap 4</span>.</h3>
+				<div class="cta">
+					<a href="#features" class="btn btn-primary smooth-link">Get Started</a>
+					<div class="link">						
+						<a href="#">From stisla Under the MIT License</a>
+					</div>
+				</div>
+			</div>
+		</section>
 
-<form action="pixiv/getCrawlerResults" method="post">
-    tags：<input type="text" name="tags" /><br/>
-    <input type="submit" value="提交" />
-</form>
+		<section class="padding" id="features">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-4 col-sm-12">
+						<div class="list-item">
+							<div class="icon">
+								<i class="ion-code"></i>
+							</div>
+							<div class="desc">
+								<h2>Based on SpringBoot</h2>
+								<p>
+									基于SpringBoot搭建项目，ORM采用MyBatis，Redis为缓存
+								</p>
+								<a href="#" class="more">Learn More</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4 col-sm-12">
+						<div class="list-item">
+							<div class="icon">
+								<i class="ion-social-github"></i>
+							</div>
+							<div class="desc">
+								<h2>PixivCrawler</h2>
+								<p>
+									爬虫功能基于WebMagic开源框架，框架继承了Netty,Jsoup等开源工具包
+								</p>
+								<a href="https://github.com/code4craft/webmagic" class="more">Learn More</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4 col-sm-12">
+						<div class="list-item no-spacing">
+							<div class="icon">
+								<i class="ion-paintbrush"></i>
+							</div>
+							<div class="desc">
+								<h2>Concurrency</h2>
+								<p>
+									参考秒杀场景设计并发
+								</p>
+								<a href="#" class="more">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-<br>
+		<section class="padding bg-grey" id="blog">
+			<div class="container">
+				<h2 class="section-title">Shiki's MicroBlog</h2>
+				<p class="section-lead text-muted">Share some thoughts and write some article and wish you liked it.</p>
+				<div class="section-body">
+					<div class="row col-spacing">
+						<div class="col-12 col-md-6 col-lg-4">
+							<article class="card">
+							  <img class="card-img-top" src="img/news/img01.jpg" height="480" width="671" alt="Article Image">
+							  <div class="card-body">
+								  <div class="card-subtitle mb-2 text-muted">by <a href="#">Ryougi Shiki</a> on August 10, 2019</div>
+							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Notes of DataStructure </a></h4>
+							    <p class="card-text">LongQueue can't be optimized by raising cores of CPU, the cache maybe the most important influential factor in this case.</p>
+							    <div class="text-right">						    	
+								    <a href="#" class="card-more" data-toggle="read" data-id="1">Read More <i class="ion-ios-arrow-right"></i></a>
+							    </div>
+						    </div>
+						  </article>
+					  </div>
+					  <div class="col-12 col-md-6 col-lg-4">
+							<article class="card">
+							  <img class="card-img-top" src="img/news/img04.jpg" height="480" width="671" alt="Article Image">
+							  <div class="card-body">
+								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
+							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Velit esse cillum dolore eu blos siur dropsida wedor</a></h4>
+							    <p class="card-text">Mauris eu eros in metus elementum porta eget sed ligula. Praesent consequat, ipsum molestie pellentesque venenatis.</p>
+							    <div class="text-right">						    	
+								    <a href="#" class="card-more" data-toggle="read" data-id="1">Read More <i class="ion-ios-arrow-right"></i></a>
+							    </div>
+						    </div>
+						  </article>
+						</div>
+						<div class="col-12 col-md-6 col-lg-4">
+							<article class="card">
+							  <img class="card-img-top" src="img/news/img02.jpg" height="480" width="671" alt="Article Image">
+							  <div class="card-body">
+								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
+							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Excepteur sint as occaecat dros cupidatat non proident los</a></h4>
+							    <p class="card-text">Mauris eu eros in metus elementum porta eget sed ligula. Praesent consequat, ipsum molestie pellentesque venenatis.</p>
+							    <div class="text-right">						    	
+								    <a href="#" class="card-more" data-toggle="read" data-id="1">Read More <i class="ion-ios-arrow-right"></i></a>
+							    </div>
+						    </div>
+						  </article>
+					  </div>
+					  <div class="col-12 col-md-6 col-lg-4">
+							<article class="card">
+							  <img class="card-img-top" src="img/news/img05.jpg" height="480" width="671" alt="Article Image">
+							  <div class="card-body">
+								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
+							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Sunt in ado culpa qui officia deserunt mollit anim id</a></h4>
+							    <p class="card-text">Mauris eu eros in metus elementum porta eget sed ligula. Praesent consequat, ipsum molestie pellentesque venenatis.</p>
+							    <div class="text-right">						    	
+								    <a href="#" class="card-more" data-toggle="read" data-id="1">Read More <i class="ion-ios-arrow-right"></i></a>
+							    </div>
+						    </div>
+						  </article>
+						</div>
+						<div class="col-12 col-md-6 col-lg-4">
+							<article class="card">
+							  <img class="card-img-top" src="img/news/img03.jpg" height="480" width="671" alt="Article Image">
+							  <div class="card-body">
+								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
+							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Incididunt ut labore et labore dolore magna aliqua lorem</a></h4>
+							    <p class="card-text">Mauris eu eros in metus elementum porta eget sed ligula. Praesent consequat, ipsum molestie pellentesque venenatis.</p>
+							    <div class="text-right">						    	
+								    <a href="#" class="card-more" data-toggle="read" data-id="1">Read More <i class="ion-ios-arrow-right"></i></a>
+							    </div>
+						    </div>
+						  </article>
+					  </div>
+					  <div class="col-12 col-md-6 col-lg-4">
+							<article class="card">
+							  <img class="card-img-top" src="img/news/img06.jpg" alt="Article Image">
+							  <div class="card-body">
+								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
+							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Ut enim ad minim veniam quis nostrud enim ad kruv</a></h4>
+							    <p class="card-text">Mauris eu eros in metus elementum porta eget sed ligula. Praesent consequat, ipsum molestie pellentesque venenatis.</p>
+							    <div class="text-right">						    	
+								    <a href="#" class="card-more" data-toggle="read" data-id="1">Read More <i class="ion-ios-arrow-right"></i></a>
+							    </div>
+						    </div>
+						  </article>
+						</div>
+					</div>
+				</div>
 
-</body>
+				<div class="row align-items-center mt-5">
+					<div class="col-12 col-md-6">
+						<h2>Want to Subscribe this or cantact me?</h2>
+						<p class="text-muted">Please enter your email </p>
+					</div>
+					<div class="col-12 col-md-6">
+						<form class="subscribe" action="#">
+							<input type="email" name="email" class="form-control" placeholder="Your email">
+							<button class="btn btn-primary">Subscribe</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
+		<div class="tlinks">Collect from <a href="http://www.github.com/"  title="github">github</a></div>
+
+		<section class="bg-overlay padding" id="project" data-bg="img/projects.jpeg">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-12 col-md-6">
+						<figure class="projects-picture">
+							<img src="img/youzhang.png" alt="Youzhang">
+						</figure>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="projects-details">
+							<div class="projects-badge">
+								Featured
+							</div>
+							<h2 class="projects-title">PixivQuery - You can find all types of images </h2>
+							<p class="projects-description">
+								PixivQuery can get all types of the most popular images from Pixiv, you can also pull request to the backend so the crawler will be excuted and get new data from the site.
+							</p>
+							<div class="projects-cta">
+								<!--<a href="#" class="btn btn-primary" target="_blank">
+									Search Now
+								</a>-->
+								<form action="pixiv/getPixivImageUrl" class="" method="post">
+									tags：<input type="text" name="tags" /><br/>
+									<input type="submit" class="btn-secondary" value="Search Now" style="color: #0f0f0f "/>
+								</form>
+								<a href="/login/to_login" class="btn btn-link" target="_blank">
+									More Results Need?
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="padding bg-grey" id="contact">
+			<div class="container">
+				<h2 class="section-title text-center">Contact Me</h2>
+				<p class="section-lead text-center text-muted">I will response you as soon as possible</p>
+				<div class="section-body">				
+					<div class="row col-spacing">
+						<div class="col-12 col-md-5">
+							<p class="contact-text">You can send me something like a question or message, I'm available 10:00 to 00:00.</p>
+							<ul class="contact-icon">
+								<li><i class="ion ion-ios-telephone"></i> <div>+244160917</div></li>
+								<li><i class="ion ion-ios-email"></i> <div>arthas_dk@foxmail.com</div></li>
+							</ul>
+							
+						</div>
+						<div class="col-12 col-md-7">
+							<form class="contact row" id="contact-form">
+								<div class="form-group col-6">
+									<input type="text" class="form-control" placeholder="Name" name="name" required="">
+								</div>
+								<div class="form-group col-6">
+									<input type="email" class="form-control" placeholder="Email" name="email" required="">
+								</div>
+								<div class="form-group col-12">
+									<input type="text" class="form-control" placeholder="Subject" name="subject" required="">
+								</div>
+								<div class="form-group col-12">
+									<textarea class="form-control" placeholder="Message" name="message" required></textarea>
+								</div>
+								<div class="form-group col-12 mt-2">
+									<button class="btn btn-primary">
+										Send Message
+									</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="callout">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-12 col-md-8 text">
+						<h3></h3>
+					</div>
+					<div class="col-12 col-md-4 cta">
+						<a href="http://down.cssmoban.com/cssthemes1/tp0_bigbang.zip" class="btn btn-outline-primary">
+							Download This
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<footer>
+			<div class="container">
+				<figure>
+					<img src="img/logo-light.png" alt="Logo">
+				</figure>
+				<p>
+					Copyright &copy; 2020
+				</p>
+				<p>
+					More Templates <a href="http://www.github.com/" target="_blank" title="github">github</a> - Collect from <a href="http://www.github.com/" title="template" target="_blank">Github</a>
+				</p>
+			</div>
+		</footer>
+
+		<script src="js/jquery.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
+		<script src="js/jquery.easeScroll.js"></script>
+		<script src="sweetalert/dist/sweetalert.min.js"></script>
+		<script src="js/stisla.js"></script>
+	</body>
+	<script>
+		function login(){
+			$("#loginForm").validate({
+				submitHandler:function(form){
+					doLogin();
+				}
+			});
+		}
+		function doLogin(){
+			g_showLoading();
+
+			var inputPass = $("#password").val();
+			var salt = g_passsword_salt;
+			var str = ""+salt.charAt(0)+salt.charAt(1) + inputPass +salt.substring(2);
+			var password = md5(str);
+
+			$.ajax({
+				url: "/login/do_login",
+				type: "POST",
+				data:{
+					mobile:$("#mobile").val(),
+					password: password
+				},
+				success:function(data){
+					layer.closeAll();
+					if(data.code == 0){
+						layer.msg("成功");
+						window.location.href="/pixiv/getCrawlerPage";
+					}else{
+						layer.msg(data.msg);
+					}
+				},
+				error:function(){
+					layer.closeAll();
+				}
+			});
+		}
+	</script>
 </html>
